--- a/gateway.yml
+++ b/gateway.yml
@@ -2,14 +2,10 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
 metadata:
   name: website
+  namespace: default
 spec:
   gatewayClassName: gateway-class
   listeners:
     - name: http
       protocol: HTTP
       port: 80
-    - name: https-website
-      protocol: HTTPS
-      port: 443
-      tls:
-        mode: Terminate
