--- a/gateway.yml
+++ b/gateway.yml
@@ -1,11 +1,11 @@
-apiVersion: gateway.networking.k8s.io/v1
-kind: Gateway
-metadata:
-  name: website
-  namespace: default
-spec:
-  gatewayClassName: gateway-class
-  listeners:
-    - name: http
-      protocol: HTTP
-      port: 80
+#apiVersion: gateway.networking.k8s.io/v1
+#kind: Gateway
+#metadata:
+#  name: website
+#  namespace: default
+#spec:
+#  gatewayClassName: gateway-class
+#  listeners:
+#    - name: http
+#      protocol: HTTP
+#      port: 80
